--- a/4-states/_projects_clickedAndTurn.scss
+++ b/4-states/_projects_clickedAndTurn.scss
@@ -1,4 +1,5 @@
 .ProjectMain_clickedLeft{
+    
     transition: 0.6s;
     z-index: 55;
     position: fixed;
@@ -10,56 +11,56 @@
     box-shadow: 0px 0px 10px black;
     &_1{
         z-index: 55;
-        top: 20vw;
+        top: 32.5vh;
         left: 7.5vw;
-        transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
+        transform: rotateY(0deg) scaleX(1) scaleY(1) translateZ(0px);
         width: 85vw;
-        height: 60vw;
+        height: 35vh;
         box-shadow: 0px 0px 10px black;
     }
     &_3{
         z-index: 55;
-        top: 20vw;
-        left: 20vw;
+        top: 25vh;
+        left: 10vw;
         transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-        width: 60vw;
-        height: 60vw;
+        width: 80vw;
+        height: 50vh;
         box-shadow: 0px 0px 10px black;
     }
     &_5{
         z-index: 55;
-        top: 5vw;
-        left: 20vw;
+        top: 10vh;
+        left: 5vw;
         transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-        width: 60vw;
-        height: 90vw;
+        width: 90vw;
+        height: 80vh;
         box-shadow: 0px 0px 10px black;
     }
     &_7{
         z-index: 55;
-        top: 20vw;
-        left: 15vw;
+        top: 30vh;
+        left: 5vw;
         transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-        width: 70vw;
-        height: 60vw;
+        width: 90vw;
+        height: 40vh;
         box-shadow: 0px 0px 10px black;
     }
     &_8{
         z-index: 55;
-        top: -10vw;
-        left: 15vw;
+        top: 0vh;
+        left: 10vw;
         transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-        width: 70vw;
-        height: 100vw;
+        width: 80vw;
+        height: 80vh;
         box-shadow: 0px 0px 10px black;
     }
     &_10{
         z-index: 55;
-        top: -5vw;
-        left: 15vw;
+        top: 0vh;
+        left: 10vw;
         transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-        width: 70vw;
-        height: 110vw;
+        width: 80vw;
+        height: 80vh;
         box-shadow: 0px 0px 10px black;
     }
     
@@ -70,41 +71,41 @@
     position: fixed;
     width: 80vw;
     height: 60vh;
-    top: 20vw;
+    top: 20vh;
     right: 10vw;
     transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
     box-shadow: 0px 0px 10px black;
     &_2{
         z-index: 55;
         transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-        width: 80vw;
-        height: 70vw;
-        top: 15vw;
-        right: 10vw;
+        width: 90vw;
+        height: 50vh;
+        top: 25vh;
+        right: 5vw;
     }
     &_4{
         z-index: 55;
         transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
         width: 80vw;
-        height: 110vw;
-        top: -5vw;
+        height: 80vh;
+        top: 10vh;
         right: 10vw;
     }
     &_6{
         z-index: 55;
         transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
         width: 80vw;
-        height: 100vw;
-        top: 10vw;
+        height: 90vh;
+        top: 5vh;
         right: 10vw;
     }
     &_9{
         z-index: 55;
-        transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-        width: 80vw;
-        height: 100vw;
-        top: 0vw;
-        right: 10vw;
+        transform: rotateY(0deg) scaleX(1) scaleY(1);
+        width: 90vw;
+        height: 80vh;
+        top: 0vh;
+        right: 5vw;
     }
     
     
@@ -119,7 +120,7 @@
     width: 34vw;
     height: 22vh;
     transition: 0s;
-    transform: translateZ(-30px) rotateY(180deg) translateY(10px);
+    transform: translateZ(0px) rotateY(180deg) scale(1.3);
     font-size: 1rem;
     box-shadow: 0px 0px 4px black;
 }
