--- a/app.css
+++ b/app.css
@@ -729,6 +729,11 @@ h4 {
 
 /* Animation Values */
 .ProjectMain {
+  border-radius: 15px;
+  -webkit-perspective: 200px;
+          perspective: 200px;
+  -webkit-perspective-origin: center;
+          perspective-origin: center;
   position: relative;
   -webkit-transition: 0.6s;
   transition: 0.6s;
@@ -758,6 +763,7 @@ h4 {
 }
 
 .ProjectMain-Back {
+  border-radius: 10px;
   font-size: 0.4rem;
   -webkit-transition: inherit;
   transition: inherit;
@@ -2034,72 +2040,72 @@ input:disabled {
 
 .ProjectMain_clickedLeft_1 {
   z-index: 55;
-  top: 20vw;
+  top: 32.5vh;
   left: 7.5vw;
-  -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-          transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
+  -webkit-transform: rotateY(0deg) scaleX(1) scaleY(1) translateZ(0px);
+          transform: rotateY(0deg) scaleX(1) scaleY(1) translateZ(0px);
   width: 85vw;
-  height: 60vw;
+  height: 35vh;
   -webkit-box-shadow: 0px 0px 10px black;
           box-shadow: 0px 0px 10px black;
 }
 
 .ProjectMain_clickedLeft_3 {
   z-index: 55;
-  top: 20vw;
-  left: 20vw;
+  top: 25vh;
+  left: 10vw;
   -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
           transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-  width: 60vw;
-  height: 60vw;
+  width: 80vw;
+  height: 50vh;
   -webkit-box-shadow: 0px 0px 10px black;
           box-shadow: 0px 0px 10px black;
 }
 
 .ProjectMain_clickedLeft_5 {
   z-index: 55;
-  top: 5vw;
-  left: 20vw;
+  top: 10vh;
+  left: 5vw;
   -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
           transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-  width: 60vw;
-  height: 90vw;
+  width: 90vw;
+  height: 80vh;
   -webkit-box-shadow: 0px 0px 10px black;
           box-shadow: 0px 0px 10px black;
 }
 
 .ProjectMain_clickedLeft_7 {
   z-index: 55;
-  top: 20vw;
-  left: 15vw;
+  top: 30vh;
+  left: 5vw;
   -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
           transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-  width: 70vw;
-  height: 60vw;
+  width: 90vw;
+  height: 40vh;
   -webkit-box-shadow: 0px 0px 10px black;
           box-shadow: 0px 0px 10px black;
 }
 
 .ProjectMain_clickedLeft_8 {
   z-index: 55;
-  top: -10vw;
-  left: 15vw;
+  top: 0vh;
+  left: 10vw;
   -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
           transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-  width: 70vw;
-  height: 100vw;
+  width: 80vw;
+  height: 80vh;
   -webkit-box-shadow: 0px 0px 10px black;
           box-shadow: 0px 0px 10px black;
 }
 
 .ProjectMain_clickedLeft_10 {
   z-index: 55;
-  top: -5vw;
-  left: 15vw;
+  top: 0vh;
+  left: 10vw;
   -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
           transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-  width: 70vw;
-  height: 110vw;
+  width: 80vw;
+  height: 80vh;
   -webkit-box-shadow: 0px 0px 10px black;
           box-shadow: 0px 0px 10px black;
 }
@@ -2111,7 +2117,7 @@ input:disabled {
   position: fixed;
   width: 80vw;
   height: 60vh;
-  top: 20vw;
+  top: 20vh;
   right: 10vw;
   -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
           transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
@@ -2123,10 +2129,10 @@ input:disabled {
   z-index: 55;
   -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
           transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-  width: 80vw;
-  height: 70vw;
-  top: 15vw;
-  right: 10vw;
+  width: 90vw;
+  height: 50vh;
+  top: 25vh;
+  right: 5vw;
 }
 
 .ProjectMain_clickedRight_4 {
@@ -2134,8 +2140,8 @@ input:disabled {
   -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
           transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
   width: 80vw;
-  height: 110vw;
-  top: -5vw;
+  height: 80vh;
+  top: 10vh;
   right: 10vw;
 }
 
@@ -2144,19 +2150,19 @@ input:disabled {
   -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
           transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
   width: 80vw;
-  height: 100vw;
-  top: 10vw;
+  height: 90vh;
+  top: 5vh;
   right: 10vw;
 }
 
 .ProjectMain_clickedRight_9 {
   z-index: 55;
-  -webkit-transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-          transform: rotateY(0deg) scaleX(0.8) scaleY(0.8);
-  width: 80vw;
-  height: 100vw;
-  top: 0vw;
-  right: 10vw;
+  -webkit-transform: rotateY(0deg) scaleX(1) scaleY(1);
+          transform: rotateY(0deg) scaleX(1) scaleY(1);
+  width: 90vw;
+  height: 80vh;
+  top: 0vh;
+  right: 5vw;
 }
 
 .ProjectMain_back {
@@ -2172,8 +2178,8 @@ input:disabled {
   height: 22vh;
   -webkit-transition: 0s;
   transition: 0s;
-  -webkit-transform: translateZ(-30px) rotateY(180deg) translateY(10px);
-          transform: translateZ(-30px) rotateY(180deg) translateY(10px);
+  -webkit-transform: translateZ(0px) rotateY(180deg) scale(1.3);
+          transform: translateZ(0px) rotateY(180deg) scale(1.3);
   font-size: 1rem;
   -webkit-box-shadow: 0px 0px 4px black;
           box-shadow: 0px 0px 4px black;
